--- a/src/CustomDocWriter/wwwroot/css/app.css
+++ b/src/CustomDocWriter/wwwroot/css/app.css
@@ -36,6 +36,10 @@ a, .btn-link {
     color: red;
 }
 
+.form-check-input, .form-check-label, .form-group > label {
+    cursor: pointer;
+}
+
 #blazor-error-ui {
     color-scheme: light only;
     background: lightyellow;
